## -*- mode: Makefile ; mode: font-lock -*- 
## Version: $Id: Makefile.am,v 0.0 2007/05/24 20:17:55 mok Exp $
## Author: mok@bioxray.dk
## Copyright 2007 Morten Kjeldgaard
## This code is distributed under the GPL license.

htmldir = $(datadir)/doc/ccp4/

html_DATA = abs.html ACKNOWLEDGEMENTS_V6_0.html acorn.html act.html	    \
almn.html alternate_origins.html amore.html angles.html anisoanl.html	    \
areaimol.html arp_waters.html AstexViewer.html axissearch.html		    \
baverage.html beast.html bones2pdb.html bp3.html bplot.html bulk.html	    \
cad.html cavenv.html cciflib.html ccp4.html ccp4i.html ccp4mapwish.html	    \
ccplib.html chainsaw.html CHANGESinV6_0.html cheshirecell.html		    \
chltofom.html cif2mtz.html cif2xml.html clustalw.html combat.html	    \
compar.html contact.html coordconv.html coord_format.html cpirate.html	    \
crank.html crossec.html cross_validate.html detwin.html dhm_tool.html	    \
diskio.html distang.html dm.html dmmulti.html dm_ncs_averaging.html	    \
dm_skeletonisation.html dna_output.html dtrek2mtz.html dtrek2scala.html	    \
dyndom.html ecalc.html extends.html f2mtz.html fffear_fraglib.html	    \
fffear.html ffjoin.html fft.html fhscal.html findncs.html freerflag.html    \
freerunique.html fsearch.html FUNCTION.html gensym.html geomcalc.html	    \
getax.html get_prot.html harvesting.html harvlib.html havecs.html hgen.html \
hklplot.html hklview.html icoefl.html INDEX.html intro_mon_lib.html	    \
ipdisp.html keyparse.html libcheck.html libhtml.html lib_list.html	    \
library.html loggraphformat.html loggraph.html lsqkab.html makedict.html    \
mama2ccp4.html map2fs.html mapdump.html mapexchange.html maplib.html	    \
mapmask.html mapreplace.html maprot.html mapsig.html mapslicer.html	    \
maptona4.html matthews_coef.html mlphare.html mmcifformat.html modlib.html  \
molrep.html mon_lib.html mosflm.html mtz2various.html mtzdump.html	    \
mtzformat.html mtzlib.html mtzMADmod.html mtzmnf.html mtztona4.html	    \
mtzutils.html ncont.html ncsmask.html npo.html oasis.html omit.html	    \
overlapmap.html p842asc.html parser.html patch_ccp4.html pdbcur.html	    \
pdb_extract-CCP4.html pdb_extract.html pdbformat.html pdb_merge.html	    \
pdbset.html peakmax.html phaser.html phistats.html pltdev.html		    \
polarrfn.html polypose.html postref.html procheck.html professs.html	    \
pxxml.html rantan.html rasmol.html rdent.html rebatch.html REFERENCES.html  \
refindex.html refmac5.html reforigin.html reindex.html reindexing.html	    \
restrain.html revise.html rfcorr.html rotamer.html rotamer_table.html	    \
rotaprep.html rotgen.html rotmat.html rsearch.html rsps.html rstats.html    \
rwbrook.html rwcontents.html sapi.html scala.html scalechoose.html	    \
scalechoose-pictures.html scaleit.html scalepack2mtz.html sc.html	    \
sfall.html sfcheck.html sftools.html sigmaa.html sketcher.html solomon.html \
sortmtz.html sortwater.html stereo.html stgrid.html stnet.html		    \
superpose.html surface.html symlib.html symmetry.html tffc.html tlsanl.html \
tlsextract.html topdraw.html topp.html tracer.html truncate.html	    \
twinning.html unique.html unix.html vecref.html vecsum.html vectors.html    \
volume.html watertidy.html watncs.html watpeak.html wilson.html		    \
xdldataman.html xdlmapman.html xdl_view.html xloggraph.html		    \
xplot84driver.html zeroed.html
 
EXTRA_DIST = $(html_DATA) procheck_man

install-data-local:
	cp -a procheck_man $(DESTDIR)/$(htmldir)

####
