

SUBDIRS = \
        @CLIPPER_PHS_DIR@ \
	@CLIPPER_CONTRIB_DIR@ \
	@CLIPPER_CIF_DIR@      \
	@CLIPPER_MMDB_DIR@     \
	@CLIPPER_MMDBOLD_DIR@  \
	@CLIPPER_MINIMOL_DIR@  \
	@CLIPPER_MTZ_DIR@      \
	@CLIPPER_CCP4_DIR@     \
	@CLIPPER_CCTBX_DIR@    \
	@CLIPPER_CNS_DIR@ core

DIST_SUBDIRS = core phs cif mmdb mmdbold minimol mtz ccp4 cctbx contrib

library_include_HEADERS = \
clipper-ccp4.h            clipper-mmdb.h            minimal-clipper-hkl.h \
clipper-cctbx.h           clipper-mmdbold.h         minimal-clipper-map.h \
clipper-cif.h             clipper-mtz.h \
clipper-contrib.h         clipper-phs.h \
clipper-minimol.h         clipper.h

library_includedir = $(pkgincludedir)


