## -*- mode: Makefile; mode: font-lock -*-

SUBDIRS = \
	phs contrib cif mmdb minimol ccp4 cns
#        @CLIPPER_PHS_DIR@ \
#	@CLIPPER_CONTRIB_DIR@ \
#	@CLIPPER_CIF_DIR@      \
#	@CLIPPER_MMDB_DIR@     \
#	@CLIPPER_MMDBOLD_DIR@  \
#	@CLIPPER_MINIMOL_DIR@  \
#	@CLIPPER_CCP4_DIR@     \
#	@CLIPPER_CCTBX_DIR@    \
#	@CLIPPER_CNS_DIR@ core

DIST_SUBDIRS = core phs cif mmdb mmdbold minimol ccp4 cctbx contrib

library_include_HEADERS =			\
	clipper-ccp4.h				\
	clipper-cctbx.h				\
	clipper-cif.h				\
	clipper-cns.h				\
	clipper-contrib.h			\
	clipper.h				\
	clipper-minimol.h			\
	clipper-mmdb.h				\
	clipper-mmdbold.h			\
	clipper-phs.h				\
	minimal-clipper-hkl.h			\
	minimal-clipper-map.h 


library_includedir = $(pkgincludedir)

####

