## -*- mode: Makefile ; mode: font-lock -*- 
## Version: $Id: Makefile.am,v 0.0 2007/05/22 18:08:58 mok Exp $
## Author: mok@bioxray.dk
## Copyright 2007 Morten Kjeldgaard
## This code is distributed under the GPL license.

lib_LTLIBRARIES = libmmdb.la

include_HEADERS = bfgs_min.h mmdb_atom.h mmdb_ficif.h mmdb_rwbrook.h	   \
mmdb_uddata.h file_.h mmdb_bondmngr.h mmdb_file.h mmdb_sbase0.h		   \
mmdb_utils.h linalg_.h mmdb_chain.h mmdb_graph.h mmdb_sbase.h mmdb_xml.h   \
machine_.h mmdb_cifdefs.h mmdb_manager.h mmdb_selmngr.h random_n.h math_.h \
mmdb_coormngr.h mmdb_mask.h mmdb_symop.h stream_.h mattype_.h mmdb_cryst.h \
mmdb_mmcif.h mmdb_tables.h mmdb_align.h mmdb_defs.h mmdb_model.h	   \
mmdb_title.h

libmmdb_la_SOURCES = bfgs_min.cpp file_.cpp linalg_.cpp machine_.cpp	   \
math_.cpp mattype_.cpp mmdb_align.cpp mmdb_atom.cpp mmdb_bondmngr.cpp	   \
mmdb_chain.cpp mmdb_cifdefs.cpp mmdb_coormngr.cpp mmdb_cryst.cpp	   \
mmdb_ficif.cpp mmdb_file.cpp mmdb_graph.cpp mmdb_manager.cpp mmdb_mask.cpp \
mmdb_mmcif.cpp mmdb_model.cpp mmdb_rwbrook.cpp mmdb_sbase0.cpp		   \
mmdb_sbase.cpp mmdb_selmngr.cpp mmdb_symop.cpp mmdb_tables.cpp		   \
mmdb_title.cpp mmdb_uddata.cpp mmdb_utils.cpp mmdb_xml.cpp random_n.cpp	   \
stream_.cpp


####
