### -*- mode: Makefile; mode: font-lock -*-

INCLUDES = $(CCP4_CXXFLAGS)

lib_LTLIBRARIES = libclipper-ccp4.la

libclipper_ccp4_la_SOURCES = ccp4_mtz_types.cpp ccp4_mtz_io.cpp	\
	ccp4_map_io.cpp ccp4_utils.cpp

library_include_HEADERS = ccp4_map_io.h ccp4_mtz_io.h ccp4_mtz_types.h \
	ccp4_utils.h

library_includedir = $(pkgincludedir)/ccp4

####
