#   Copyright 2005 
#   For licence conditions, see the file COPYING in the distribution.

#shared
lib_LTLIBRARIES = libclipper-cns.la

#non shared
#lib_LIBRARIES = libclipper-cns.a

libclipper_cns_la_SOURCES = cns_hkl_io.cpp

#libclipper_cns_a_SOURCES = $(libclipper_cns_la_SOURCES)

library_include_HEADERS = cns_hkl_io.h

library_includedir = $(pkgincludedir)/cns

libclipper_cns_a_AR = $(AR) $(AR_FLAGS)
